<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/item_horizontal_margin"
        android:paddingVertical="@dimen/item_vertical_margin">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="0dp"
            android:layout_height="28sp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_weight="2"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="4sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:contentDescription="@string/name"
            android:gravity="center_vertical"
            android:text="@string/name" />

        <TextView
            android:id="@+id/text_view_duration"
            android:layout_width="0dp"
            android:layout_height="28sp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="4sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:contentDescription="@string/duration"
            android:gravity="center_vertical|end"
            android:text="@string/duration" />

        <TextView
            android:id="@+id/text_view_quantity"
            android:layout_width="0dp"
            android:layout_height="28sp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="4sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:contentDescription="@string/quantity"
            android:gravity="center_vertical|end"
            android:text="@string/quantity" />


        <TextView
            android:id="@+id/text_view_total_duration"
            android:layout_width="0dp"
            android:layout_height="28sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="4sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:contentDescription="@string/total_duration"
            android:gravity="center_vertical|end"
            android:text="@string/total"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

</androidx.appcompat.widget.LinearLayoutCompat>